@@ -3,7 +3,7 @@ Encoding=UTF-8
 _Name=Network Proxy
 _Comment=Network proxy preferences
 Exec=gnome-network-preferences
-Icon=gnome-globe
+Icon=stock_proxy
 Terminal=false
 Type=Application
 StartupNotify=true
