@@ -11,6 +11,10 @@ Jody:
     http://bugzilla.gnome.org/show_bug.cgi?id=139190
     * Fix uniqueness test for binding special keys with no name
     * Fix theme manager selection when not running metacity
+    http://bugzilla.gnome.org/show_bug.cgi?id=139605
+    * Mouse buttons are not valid modifiers for keybindings
+    * Force libxklavier 1.0.2 so that we can work with x.org and xfree86
+    * Match nautilus' interpretation of icons in desktop files
 
 Padraig O'Briain:
     http://bugzilla.gnome.org/show_bug.cgi?id=131538.
